; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_user_sdma.c_qib_user_sdma_init_header.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_user_sdma.c_qib_user_sdma_init_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qib_user_sdma_pkt = type { i32, i32 }
%struct.page = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qib_user_sdma_pkt*, i32, i64, i64, i32, %struct.page*, i8*, i32)* @qib_user_sdma_init_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qib_user_sdma_init_header(%struct.qib_user_sdma_pkt* %0, i32 %1, i64 %2, i64 %3, i32 %4, %struct.page* %5, i8* %6, i32 %7) #0 {
  %9 = alloca %struct.qib_user_sdma_pkt*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.page*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  store %struct.qib_user_sdma_pkt* %0, %struct.qib_user_sdma_pkt** %9, align 8
  store i32 %1, i32* %10, align 4
  store i64 %2, i64* %11, align 8
  store i64 %3, i64* %12, align 8
  store i32 %4, i32* %13, align 4
  store %struct.page* %5, %struct.page** %14, align 8
  store i8* %6, i8** %15, align 8
  store i32 %7, i32* %16, align 4
  %17 = load %struct.qib_user_sdma_pkt*, %struct.qib_user_sdma_pkt** %9, align 8
  %18 = getelementptr inbounds %struct.qib_user_sdma_pkt, %struct.qib_user_sdma_pkt* %17, i32 0, i32 0
  store i32 1, i32* %18, align 4
  %19 = load i32, i32* %10, align 4
  %20 = load %struct.qib_user_sdma_pkt*, %struct.qib_user_sdma_pkt** %9, align 8
  %21 = getelementptr inbounds %struct.qib_user_sdma_pkt, %struct.qib_user_sdma_pkt* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 4
  %22 = load %struct.qib_user_sdma_pkt*, %struct.qib_user_sdma_pkt** %9, align 8
  %23 = load i64, i64* %11, align 8
  %24 = load i64, i64* %12, align 8
  %25 = load i32, i32* %13, align 4
  %26 = load %struct.page*, %struct.page** %14, align 8
  %27 = load i8*, i8** %15, align 8
  %28 = load i32, i32* %16, align 4
  %29 = call i32 @qib_user_sdma_init_frag(%struct.qib_user_sdma_pkt* %22, i32 0, i64 %23, i64 %24, i32 0, i32 %25, %struct.page* %26, i8* %27, i32 %28)
  ret void
}

declare dso_local i32 @qib_user_sdma_init_frag(%struct.qib_user_sdma_pkt*, i32, i64, i64, i32, i32, %struct.page*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
